[package]
# This is NOT an official Rust project but since most code will come from
# the rust-lang/rust repo it makes sense to use this author.
authors = ["The Rust Project Developers"]
name = "std"
version = "0.1.0"

[dependencies]
sc = "0.1.5"

[dependencies.ralloc]
default-features = false
features = ["allocator"]
git = "https://github.com/redox-os/ralloc"
optional = true

[dependencies.naive_ralloc]
optional = true
path = "naive_ralloc"

[dependencies.compiler_builtins]
features = ["mem"]
git = "https://github.com/rust-lang-nursery/compiler-builtins"

[features]
default = ["ralloc"]

[profile.dev]
debug_assertions = false

[profile.release]
lto = true
