[package]
# This is NOT an official Rust project but since most code will come from
# the rust-lang/rust repo it makes sense to use this author.
authors = ["The Rust Project Developers"]
name = "std"
version = "0.1.0"

[dependencies]
sc = { git = "git://github.com/japaric/syscall.rs" }

[dependencies.ralloc]
default-features = false
features = ["allocator"]
git = "https://github.com/redox-os/ralloc"
optional = true

[dependencies.naive_ralloc]
optional = true
path = "naive_ralloc"

[features]
default = ["ralloc"]

[profile.release]
lto = true
